--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,33 +22,33 @@ members = [
 ]
 
 [workspace.dependencies]
-deno_ast = { version = "=0.40.0", features = ["transpiling"] }
-deno_core = "0.293.0"
-deno_broadcast_channel = "0.155.0"
-deno_canvas = "0.30.0"
-deno_cache = "0.93.0"
-deno_console = "0.161.0"
-deno_crypto = "0.175.0"
-deno_fetch = "0.185.0"
-deno_fs = { version = "0.71.0", features = ["sync_fs"] }
-deno_http = "0.159.0"
-deno_io = "0.71.0"
-deno_net = "0.153.0"
-deno_tls = "0.148.0"
-deno_url = "0.161.0"
-deno_web = "0.192.0"
-deno_webgpu = "0.128.0"
-deno_webidl = "0.161.0"
-deno_websocket = "0.166.0"
-deno_webstorage = "0.156.0"
-deno_media_type = { version = "0.1.4", features = ["module_specifier"] }
-deno_config = { version = "=0.22.2", default-features = false }
-deno_graph = "=0.80.1"
-deno_npm = "0.21.4"
-deno_semver = "=0.5.6"
-deno_cache_dir = "=0.10.0"
-deno_lockfile = "0.20.0"
-deno_permissions = "0.21.0"
+deno_ast = { version = "=0.44.0", features = ["transpiling"] }
+deno_core = "0.324.0"
+deno_broadcast_channel = "0.175.0"
+deno_canvas = "0.50.0"
+deno_cache = "0.113.0"
+deno_console = "0.181.0"
+deno_crypto = "0.195.0"
+deno_fetch = "0.205.0"
+deno_fs = { version = "0.91.0", features = ["sync_fs"] }
+deno_http = "0.179.0"
+deno_io = "0.91.0"
+deno_net = "0.173.0"
+deno_tls = "0.168.0"
+deno_url = "0.181.0"
+deno_web = "0.212.0"
+deno_webgpu = "0.148.0"
+deno_webidl = "0.181.0"
+deno_websocket = "0.186.0"
+deno_webstorage = "0.176.0"
+deno_media_type = { version = "0.2.0", features = ["module_specifier"] }
+deno_config = { version = "0.40.0", default-features = false }
+deno_graph = "=0.86.3"
+deno_npm = "0.26.0"
+deno_semver = "0.6.1"
+deno_cache_dir = "=0.14.0"
+deno_lockfile = "0.23.2"
+deno_permissions = "0.41.0"
 
 # crypto
 hkdf = "0.12.3"
@@ -65,8 +65,8 @@ windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Media
 wgpu-core = "0.21.1"
 wgpu-types = "0.20"
 
-url = { version = "< 2.5.0", features = ["serde", "expose_internals"] } # upgrading past 2.4.1 may cause WPT failures
-eszip = "=0.72.2"
+url = { version = "2.5", features = ["serde", "expose_internals"] } # upgrading past 2.4.1 may cause WPT failures
+eszip = "=0.79.1"
 log = "0.4.20"
 anyhow = "1.0.57"
 libc = "0.2.144"
@@ -75,9 +75,9 @@ num-traits = "0.2"
 enum-as-inner = "0.6.0"
 serde = { version = "1.0.149", features = ["derive"] }
 serde_json = "1.0.85"
-hyper = { version = "=1.4.0", features = ["full"] }
+hyper = { version = "=1.4.1", features = ["full"] }
 hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
-hyper-util = { version = "=0.1.6", features = ["tokio", "server", "server-auto"] }
+hyper-util = { version = "=0.1.7", features = ["tokio", "server", "server-auto"] }
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-util = "0.7.4"
 bytes = "1.4.0"
@@ -85,7 +85,7 @@ once_cell = "1.17.1"
 thiserror = "1.0.61"
 async-trait = "0.1.73"
 indexmap = { version = "2", features = ["serde"] }
-flate2 = { version = "=1.0.26", default-features = false }
+flate2 = { version = "=1.0.30", default-features = false }
 tar = "=0.4.40"
 regex = "^1.7.0"
 fs3 = "0.5.0"
@@ -95,8 +95,8 @@ reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tl
 reqwest_v011 = { package = "reqwest", version = "0.11", features = ["stream", "json", "multipart"] }
 ring = "^0.17.0"
 import_map = { version = "=0.20.0", features = ["ext"] }
-base32 = "=0.4.0"
-base64 = "0.21.4"
+base32 = "=0.5.1"
+base64 = "0.21.7"
 futures = "0.3.21"
 futures-util = "0.3.30"
 ctor = "0.2.6"
@@ -142,11 +142,6 @@ tempfile = "3"
 xxhash-rust = "0.8"
 either = "1"
 serial_test = "3.0.0"
-
-[patch.crates-io]
-# If the PR is merged upstream, remove the line below.
-deno_core = { git = "https://github.com/supabase/deno_core", branch = "293-supabase" }
-eszip = { git = "https://github.com/supabase/eszip", branch = "fix-pub-vis-0-72-2" }
 
 [profile.dind]
 inherits = "dev"
